# MindLattice

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  build.rs  dto_schema.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/autogenerated/: agent_memory_delete.toml  agent_memory_list.toml  agent_memory_update.toml  agent_preview_accept.toml  agent_preview_get.toml  agent_preview_reject.toml  agent_preview_revise.toml  agent_turn_submit.toml  attention_session_close.toml  attention_session_start.toml  check_in_create.toml  check_in_list.toml  context_profile_get.toml  context_profile_update.toml  edge_create.toml  edge_delete.toml  map_get.toml  node_create.toml  node_move.toml  node_update.toml  settings_get_app.toml  settings_test_llm.toml  settings_update_interface.toml  settings_update_llm.toml  start_plan_get.toml  strategy_cards_list.toml  strategy_experiment_create.toml  support_adopt.toml  support_discard.toml  support_templates_list.toml  vault_export.toml  vault_import.toml  workspace_open_default.toml
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tauri_api.rs  tauri_commands.rs
apps/desktop/src-tauri/tests/: phase3_commands.rs  phase3_tauri_registration.rs
crates/agent/: Cargo.toml
crates/agent/prompt_golden/: capture_task.md  crisis_redirection.md  medical_boundary_rejection.md  preview_revision.md  start_mode_drafting.md  support_matching.md
crates/agent/prompts/: output_style.v1.md  policy.v1.md  role.v1.md  tools.v1.md  workflow.v1.md
crates/agent/src/: lib.rs  loop_state.rs  memory.rs  prompts.rs  skills.rs  tools.rs
crates/agent/tests/: phase2_agent.rs
crates/ai/: Cargo.toml
crates/ai/src/: provider.rs
crates/ai/tests/: provider_contract.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_phase1_core.sql
crates/storage/src/: repository.rs
crates/storage/tests/: phase1_repository.rs
(+68 files in other folders)
