[package]
name = "mindlattice-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mindlattice_agent"
path = "src/lib.rs"

[dependencies]
mindlattice-ai = { path = "../ai" }
mindlattice-core = { path = "../core" }
mindlattice-vault = { path = "../vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
