[package]
name = "mindlattice-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mindlattice_storage"
path = "src/lib.rs"

[dependencies]
mindlattice-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
