[package]
name = "mindlattice-desktop-commands"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mindlattice_desktop_commands"
path = "src/lib.rs"

[[bin]]
name = "mindlattice-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mindlattice-agent = { path = "../../../crates/agent" }
mindlattice-ai = { path = "../../../crates/ai" }
mindlattice-core = { path = "../../../crates/core" }
mindlattice-storage = { path = "../../../crates/storage" }
mindlattice-vault = { path = "../../../crates/vault" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
